# OpenSuperWhisper

./: Readme.md  make_release.sh  notarize_app.sh  run.sh
.github/workflows/: build.yml
OpenSuperWhisper/: AudioRecorder.swift  ContentView.swift  MicrophoneService.swift  OpenSuperWhisperApp.swift  ParakeetModelManager.swift  PermissionsManager.swift  Settings.swift  ShortcutManager.swift  TranscriptionService.swift  WhisperModelManager.swift
OpenSuperWhisper.xcodeproj/: project.pbxproj
OpenSuperWhisper.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
OpenSuperWhisper/Indicator/: IndicatorWindow.swift
OpenSuperWhisper/Models/: SpeechModelVendor.swift
OpenSuperWhisper/Onboarding/: OnboardingView.swift
OpenSuperWhisper/Utils/: AppPreferences.swift
OpenSuperWhisper/Whis/: Whis.swift
libwhisper/: CMakeLists.txt
